--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>INDEX PAGE</h1>
 <br>
-<img src="welcome.png" alt="welcome" height="42" width="42">
+<img src="welcome.png" alt="welcome">
 
 </body>
 
